<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:padding="5dp"
        android:background="@color/light_app_color"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/Your_cart"/>

    <ScrollView
        android:id="@+id/sc_cartScrollView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            tools:context="fragments.AddToCartFragment">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewAddtoCart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:scrollbars="vertical"
                android:background="@android:color/background_light"
                android:elevation="2dp"/>
        </RelativeLayout>

    </ScrollView>
    <TextView
        android:id="@+id/textViewNoItems"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sc_cartScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_items_in_cart_yet"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:clickable="true"
        android:visibility="gone"
        android:focusable="true" />
    <ImageView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNoItems"
        android:id="@+id/iv_animation"
        android:src="@drawable/cat"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:visibility="gone"
        />


    <LinearLayout
        android:id="@+id/basebar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:background="@color/light_app_color">

        <TextView
            android:id="@+id/tv_TotalAmount"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text="Total = "
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_Amount"
            android:textSize="20dp"
            android:layout_weight="7"
            android:textColor="@color/black"
            android:text="0"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_PlaceOrder"
            android:layout_weight="1"
            android:backgroundTint="#46BD43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_order"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
